--- a/src/styles/Cadastro.css
+++ b/src/styles/Cadastro.css
@@ -139,7 +139,11 @@ main{
     justify-content: center;
 }
 
-.btn-container > button{
+.btn-container > a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
     width: 100%;
     height: 32px;
     background: #FFFFFF;
